--- a/App.xaml
+++ b/App.xaml
@@ -1,8 +1,23 @@
 ﻿<Application x:Class="RazorTransform.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"      >
     <Application.Resources>
-         
+        <Style x:Key="CfgBigLabel" >
+            <Setter Property="Control.FontSize" Value="16"/>
+            <Setter Property="Control.FontWeight" Value="Bold"/>
+        </Style>
+        <Style x:Key="CfgLabel">
+            <Setter Property="Control.FontSize" Value="12"/>
+            <Setter Property="Control.FontWeight" Value="Normal"/>
+        </Style>
+        <Style x:Key="CfgText">
+            <Setter Property="Control.FontSize" Value="12"/>
+            <Setter Property="Control.FontWeight" Value="Normal"/>
+        </Style>
+        <Style x:Key="CfgButton">
+            <Setter Property="Control.FontSize" Value="12"/>
+            <Setter Property="Control.FontWeight" Value="Normal"/>
+            <Setter Property="Control.Margin" Value="5"/>
+        </Style>
     </Application.Resources>
 </Application>
