--- a/Controls/MainEdit.xaml
+++ b/Controls/MainEdit.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:RazorTransform"
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid x:Name="create" Loaded="create_Loaded">
+             d:DesignHeight="300" d:DesignWidth="300" Loaded="OnLoaded">
+    <Grid >
         <Grid.Background>
             <LinearGradientBrush EndPoint="1,1" StartPoint="0,0">
                 <GradientStop Color="AliceBlue"  Offset="0"/>
