--- a/Controls/EditItemBox.xaml
+++ b/Controls/EditItemBox.xaml
@@ -13,9 +13,9 @@
         </Style>
     </UserControl.Resources>
     <DockPanel>
-        <Button x:Name="btnCopy" DockPanel.Dock="Right" Padding="2" ToolTip="Copy the item" Click="btnCopy_Click">Copy</Button>
-        <Button x:Name="btnDel" DockPanel.Dock="Right" Padding="2" ToolTip="Delete the item from the list" Click="btnDel_Click">Del</Button>
-        <Button x:Name="btnEdit" DockPanel.Dock="Right" Padding="2" ToolTip="Edit the item" Margin="0,0,2,0" Click="btnEdit_Click">Edit</Button>
-        <TextBox x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=btnEdit}" Text="{Binding ItemName, ElementName=root}" Margin="0,0,2,0" IsReadOnly="True" />
+        <Button x:Name="btnCopy" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right"  ToolTip="Copy the item" Click="btnCopy_Click">Copy</Button>
+        <Button x:Name="btnDel" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Delete the item from the list" Click="btnDel_Click">Del</Button>
+        <Button x:Name="btnEdit" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Edit the item" Click="btnEdit_Click">Edit</Button>
+        <TextBox x:Name="theTextBox" Style="{StaticResource CfgText}" MinWidth="{Binding ActualWidth, ElementName=btnEdit}" Text="{Binding ItemName, ElementName=root}"  IsReadOnly="True" />
     </DockPanel>
 </UserControl>
