--- a/Controls/NameValueEdit.xaml
+++ b/Controls/NameValueEdit.xaml
@@ -4,7 +4,13 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="300" d:DesignWidth="500" Background="Transparent">
+             d:DesignHeight="300" d:DesignWidth="500" >
+    <UserControl.Background>
+        <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+            <GradientStop Color="#fdd3a8" Offset="0"/>
+            <GradientStop Color="#fce79f" Offset="1"/>
+        </LinearGradientBrush>
+    </UserControl.Background>
     <UserControl.Resources>
         <Style x:Key="CfgBigLabel">
             <Setter Property="Control.FontSize" Value="16"/>
@@ -25,7 +31,7 @@
         </Style>
     </UserControl.Resources>
 
-    <Border Grid.Row="2" Margin="10,15,10,20" BorderBrush="Black" Background="White">
+    <Border Grid.Row="2" Margin="10,15,10,20" BorderBrush="Black" Background="Transparent">
         <ScrollViewer  Margin="1" VerticalScrollBarVisibility="Auto">
             <TabControl Name="_tabCtrl" Background="White">
                 <TabItem Header="header1">content</TabItem>
