--- a/UI/ArrayItemEdit.xaml
+++ b/UI/ArrayItemEdit.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:local="clr-namespace:RazorTransform"
         Title="Item Edit" Height="450" Width="784" WindowStyle="SingleBorderWindow" 
+        ShowInTaskbar="False"
         MinHeight="100" MinWidth="300">
     <Grid>
         <Grid.Background>
