--- a/Controls/EditItemBox.xaml
+++ b/Controls/EditItemBox.xaml
@@ -1,21 +1,18 @@
 ﻿<UserControl x:Class="RazorTransform.EditItemBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:my="clr-namespace:RazorTransform.Controls"
     x:Name="root" mc:Ignorable="d" xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" d:DesignHeight="30">
-    <UserControl.Resources>
-        <Style TargetType="TextBox">
-            <Setter Property="Control.FontSize" Value="12"/>
-            <Setter Property="Control.FontWeight" Value="Normal"/>
-        </Style>
-        <Style TargetType="Button">
-            <Setter Property="Control.FontSize" Value="12"/>
-            <Setter Property="Control.FontWeight" Value="Normal"/>
-        </Style>
-    </UserControl.Resources>
-    <DockPanel>
-        <Button x:Name="btnCopy" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right"  ToolTip="Copy the item" Click="btnCopy_Click">Copy</Button>
-        <Button x:Name="btnDel" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Delete the item from the list" Click="btnDel_Click">Del</Button>
-        <Button x:Name="btnEdit" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Edit the item" Click="btnEdit_Click">Edit</Button>
-        <TextBox x:Name="theTextBox" Style="{StaticResource CfgText}" MinWidth="{Binding ActualWidth, ElementName=btnEdit}" Text="{Binding ItemName, ElementName=root}"  IsReadOnly="True" />
+    <Grid Margin="5">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <TextBox Grid.Column="0" Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=btnEdit}" Text="{Binding ItemName, ElementName=root}"  IsReadOnly="True" />
+        <DockPanel Grid.Column="1">
+        <my:MyButton x:Name="btnCopy" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right"  ToolTip="Copy the item" Click="btnCopy_Click">Copy</my:MyButton>
+        <my:MyButton x:Name="btnDel" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Delete the item from the list" Click="btnDel_Click">Del</my:MyButton>
+        <my:MyButton x:Name="btnEdit" Style="{StaticResource ArrayButton}" DockPanel.Dock="Right" ToolTip="Edit the item" Click="btnEdit_Click">Edit</my:MyButton>
     </DockPanel>
+    </Grid>
 </UserControl>
