--- a/Controls/FolderInputBox.xaml
+++ b/Controls/FolderInputBox.xaml
@@ -1,9 +1,10 @@
 <UserControl x:Class="RazorTransform.FolderInputBox"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:my="clr-namespace:RazorTransform.Controls"
     x:Name="root">
-    <DockPanel>
-        <Button x:Name="theButton" DockPanel.Dock="Right" Width="30"  Click="theButton_Click">...</Button>
-        <TextBox x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=theButton}" Text="{Binding FolderName, ElementName=root}" Margin="0,0,2,0"/>
+    <DockPanel Margin="0">
+        <my:MyButton x:Name="theButton" DockPanel.Dock="Right" Width="30"  Click="theButton_Click">...</my:MyButton>
+        <TextBox Style="{StaticResource txtBox}" x:Name="theTextBox" MinWidth="{Binding ActualWidth, ElementName=theButton}" Text="{Binding FolderName, ElementName=root}" />
     </DockPanel>
 </UserControl>
