--- a/Controls/NameValueEdit.xaml
+++ b/Controls/NameValueEdit.xaml
@@ -1,6 +1,7 @@
 ﻿<UserControl x:Class="RazorTransform.NameValueEdit"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:my="clr-namespace:RazorTransform.Controls"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
@@ -11,33 +12,22 @@
             <GradientStop Color="#fce79f" Offset="1"/>
         </LinearGradientBrush>
     </UserControl.Background>
-    <UserControl.Resources>
-        <Style x:Key="CfgBigLabel">
-            <Setter Property="Control.FontSize" Value="16"/>
-            <Setter Property="Control.FontWeight" Value="Bold"/>
-        </Style>
-        <Style x:Key="CfgLabel">
-            <Setter Property="Control.FontSize" Value="12"/>
-            <Setter Property="Control.FontWeight" Value="Normal"/>
-        </Style>
-        <Style x:Key="CfgText">
-            <Setter Property="Control.FontSize" Value="12"/>
-            <Setter Property="Control.FontWeight" Value="Normal"/>
-        </Style>
-        <Style x:Key="CfgButton">
-            <Setter Property="Control.FontSize" Value="12"/>
-            <Setter Property="Control.FontWeight" Value="Normal"/>
-            <Setter Property="Control.Margin" Value="5"/>
-        </Style>
-    </UserControl.Resources>
+    <Grid>
+            <ScrollViewer  Margin="1" VerticalScrollBarVisibility="Auto">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
 
-    <Border Grid.Row="2" Margin="10,15,10,20" BorderBrush="Black" Background="Transparent">
-        <ScrollViewer  Margin="1" VerticalScrollBarVisibility="Auto">
-            <TabControl Name="_tabCtrl" Background="White">
-                <TabItem Header="header1">content</TabItem>
-                <TabItem Header="header2">content</TabItem>
-            </TabControl>
-        </ScrollViewer>
-    </Border>
+                    <StackPanel Grid.Row="1" Name="stackPanel" Margin="0"  Background="Transparent">
+                    </StackPanel>
+                </Grid>
+              
+            </ScrollViewer>
+      
+        
+    </Grid>
+      
 
 </UserControl>
