--- a/App.xaml
+++ b/App.xaml
@@ -3,6 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"     
              xmlns:my="clr-namespace:RazorTransform.Controls">
     <Application.Resources>
+        <ControlTemplate TargetType="my:MyButton" x:Key="mainButtonTemplate">
+        </ControlTemplate>
         <Style x:Key="CfgBigLabel" >
             <Setter Property="Control.FontSize" Value="16"/>
             <Setter Property="Control.FontWeight" Value="Bold"/>
@@ -71,12 +73,104 @@
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="14"/>
             <Setter Property="Padding" Value="5"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <GradientStop Color="#f0f0f0" Offset="0"/>
+                        <GradientStop Color="LightGray" Offset=".5"/>
+                        <GradientStop Color="DarkGray" Offset=".6"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="Button.IsMouseOver" Value="True">
+                    <Setter Property="Button.Background" Value="Orange">
+                        <!--<Setter.Value>
+                            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                <GradientStop Color="#fdd3a8" Offset="0"/>
+                                <GradientStop Color="#fce79f" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>-->
+                    </Setter>
+                    <Setter Property="Foreground" Value="White">
+
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
         </Style>
+        <LinearGradientBrush x:Key="MouseOverButtonBackground" StartPoint="0.5,0" EndPoint="0.5,1">
+            <GradientStop Color="#f0f0f0" Offset="0"/>
+            <GradientStop Color="#fce79f" Offset=".5"/>
+            <GradientStop Color="Goldenrod" Offset=".6"/>
+        </LinearGradientBrush>
+        <LinearGradientBrush x:Key="ButtonBackground" StartPoint="0.5,0" EndPoint="0.5,1">
+            <GradientStop Color="#f0f0f0" Offset="0"/>
+            <GradientStop Color="LightGray" Offset=".5"/>
+            <GradientStop Color="DarkGray" Offset=".6"/>
+        </LinearGradientBrush>
         <Style TargetType="my:MyButton" x:Key="mainButton">
+            <Setter Property="FontFamily" Value="Arial"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Name="customBorder" Padding="5" Margin="5">
+                            <Border.Background>
+                                <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                    <GradientStop Color="#f0f0f0" Offset="0"/>
+                                    <GradientStop Color="LightGray" Offset=".5"/>
+                                    <GradientStop Color="DarkGray" Offset=".6"/>
+                                </LinearGradientBrush>
+                            </Border.Background>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" RecognizesAccessKey="True" />
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" TargetName="customBorder">
+                                    <Setter.Value>
+                                        <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                            <GradientStop Color="#f0f0f0" Offset="0"/>
+                                            <GradientStop Color="#fce79f" Offset=".5"/>
+                                            <GradientStop Color="Goldenrod" Offset=".6"/>
+                                        </LinearGradientBrush>
+                                    </Setter.Value>
+                                </Setter>
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+        <Style TargetType="my:MyButton" x:Key="mainButtonOrig">
             <Setter Property="FontFamily" Value="Arial"/>
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="Padding" Value="5"/>
             <Setter Property="Margin" Value="5"/>
+            <Setter Property="BorderBrush" Value="LightGray"/>
+            <Setter Property="Background">
+                <Setter.Value>
+                    <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                        <GradientStop Color="#f0f0f0" Offset="0"/>
+                        <GradientStop Color="LightGray" Offset=".5"/>
+                        <GradientStop Color="DarkGray" Offset=".6"/>
+                    </LinearGradientBrush>
+                </Setter.Value>
+            </Setter>
+            <Style.Triggers>
+                <Trigger Property="Button.IsMouseOver" Value="True">
+                    <Setter Property="Button.Background" Value="Orange">
+                        <!--<Setter.Value>
+                            <LinearGradientBrush StartPoint="0.5,0" EndPoint="0.5,1">
+                                <GradientStop Color="#fdd3a8" Offset="0"/>
+                                <GradientStop Color="#fce79f" Offset="1"/>
+                            </LinearGradientBrush>
+                        </Setter.Value>-->
+                    </Setter>
+                    <Setter Property="Button.Foreground" Value="Pink">
+
+                    </Setter>
+                </Trigger>
+            </Style.Triggers>
         </Style>
         <Style x:Key="progressTitle">
             <Setter Property="Control.FontFamily" Value="Arial"/>
@@ -86,6 +180,12 @@
         <Style x:Key="progressText">
             <Setter Property="Control.FontFamily" Value="Arial"/>
             <Setter Property="Control.Margin" Value="15,5,5,5"/>
+        </Style>
+        <Style x:Key="addDescText">
+            <Setter Property="Control.FontFamily" Value="Arial"/>
+            <Setter Property="Control.Foreground" Value="White"/>
+            <Setter Property="Control.Background" Value="Transparent"/>
+            <Setter Property="Control.VerticalAlignment" Value="Center"/>
         </Style>
         <Style TargetType="Border" x:Key="progressBorder">
             <Setter Property="CornerRadius" Value="3"/>
